decoratiom page changes

--- a/hora-app/public/index.html
+++ b/hora-app/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +26,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta name="keywords"
+    content="Personal chef, private chef to cook in home in India, home chef, book a cook near you, chef at home, Private cook in Mumbai, Book a cook for home near you, Hire Chef in Bangalore, Private Chef in Delhi, Catering service, Hora, Hora services, Horaservices" />
+<meta name="description"
+    content="Want to book a cook for home near you? Hire skilled cooks for a day or book a chef for a party at home with Hora. Get chef for a birthday or house party in Mumbai, Bangalore & Delhi NCR, Hora, Hora services, Horaservices" />
+
+
     <title>React App</title>
+    <script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Hora",
+      "alternateName": "Hora Services",
+      "url": "https://horaservices.com",
+      "description": "Want to book a cook for home near you? Hire skilled cooks for a day or book a chef for a party at home with Hora. Get chef for a birthday or house party in Mumbai, Bangalore & Delhi NCR, Hora, Hora services, Horaservices",
+      "logo": "https://horaservices.com/content/img/logo_white.svg",
+      "sameAs": [
+          "https://www.facebook.com/people/Hora/61550111701616/",
+          "https://www.instagram.com/horaservices/?fbclid=IwAR0PktJ-rl5rKC6YGSZ8BSw3m8o9qMfLpJchO17FCEZuCXKxvASZWRymifA",
+          "https://www.youtube.com/channel/UCj5gMUjptHut0aGYHxCbE5g",
+          "https://horaservices.com"
+      ]
+      }</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
