--- a/hora-app/public/index.html
+++ b/hora-app/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   
-    <title>Ballon Decoration for Party | Chef for Party | chef Near me | Decoration at home | Ballon Decoration Near me | food Delivery for Party - Hora
+    <title>Balloon Decoration for Party | Chef for Party | chef Near me | Decoration at home | Ballon Decoration Near me | food Delivery for Party - Hora
   </title>
     <script type="application/ld+json">{
       "@context": "https://schema.org",
